# temnomor-access-tgbot

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
src/: main.py  middlewares.py  states.py
src/core/: config.py  env.py  logging.py  message_templates.py  types.py
src/keyboards/: __init__.py  admin_keyboard.py  guides_keyboard.py  invoice_keyboard.py  user_keyboard.py
src/routers/: __init__.py  admin.py  buy_subscription.py  guides.py  my_subscriptions.py  start.py
src/tools/: functions.py
src/tools/http/: __init__.py  aiohttp.py
src/tools/logging/: __init__.py  telegram_bot.py
src/tools/payments/: __init__.py  payment.py
src/tools/scheduler_jobs/: __init__.py  notify_user_about_subscription_expiration.py  subscription_ip_rate_limit.py
src/tools/x_ui/: __init__.py  session.py  settings.py
