[project]
name = "temnomor-access-tgbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.18.0",
    "aiohttp[speedups]>=3.11.13",
    "aiomoney>=3.0.2",
    "apscheduler>=3.11.0",
    "loguru>=0.7.3",
    "orjson>=3.10.15",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
]
